[project]
name = "traffic-control-env"
version = "1.0.0"
description = "Autonomous Traffic Control OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.0",
    "httpx==0.27.2",
    "openai==1.51.0",
    "pyyaml==6.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
