[project]
name = "traffic-control-env"
version = "1.0.0"
description = "Autonomous Traffic Control OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.0",
    "httpx==0.27.2",
    "openai==1.51.0",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"